build/log/idf_py_stdout_output_118326
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/bodrul/iot-test/build/bootloader/esp-idf/esptool_py && /home/bodrul/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/bodrul/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/bodrul/iot-test/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj 
/home/bodrul/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/bodrul/iot-test/build/config -I/home/bodrul/iot-test/main -I/home/bodrul/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/config/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/config/xtensa/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/bodrul/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/. -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/heap/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/heap/tlsf -I/home/bodrul/esp/v5.5.1/esp-idf/components/log/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/soc/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/soc/esp32 -I/home/bodrul/esp/v5.5.1/esp-idf/components/soc/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/soc/esp32/register -I/home/bodrul/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/hal/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/hal/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_rom/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_rom/esp32 -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_common/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_system/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/home/bodrul/esp/v5.5.1/esp-idf/components/xtensa/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/xtensa/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/xtensa/deprecated_include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/include/apps -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/include/apps/sntp -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/lwip/src/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/port/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/port/freertos/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/bodrul/esp/v5.5.1/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_wifi/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_wifi/include/local -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_event/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_phy/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_phy/esp32/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_netif/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_http_server/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/http_parser -I/home/bodrul/esp/v5.5.1/esp-idf/components/nvs_flash/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_partition/include -I/home/bodrul/iot-test/managed_components/espressif__led_strip/include -I/home/bodrul/iot-test/managed_components/espressif__led_strip/interface -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_driver_rmt/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -I/home/bodrul/esp/v5.5.1/esp-idf/components/esp_pm/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/bodrul/iot-test=. -fmacro-prefix-map=/home/bodrul/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/wifi_manager.c.obj -c /home/bodrul/iot-test/main/wifi_manager.c
/home/bodrul/iot-test/main/wifi_manager.c: In function 'scan_handler':
/home/bodrul/iot-test/main/wifi_manager.c:190:14: error: '%s' directive output truncated writing 1119 bytes into a region of size 1024 [-Werror=format-truncation=]
   31 |     "<!DOCTYPE html><html><head><meta name='viewport' content='width=device-width,initial-scale=1'>"
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
......
  190 |             "%s<div class='container'>"
      |              ^~
/home/bodrul/iot-test/main/wifi_manager.c:189:9: note: 'snprintf' output 1328 bytes into a destination of size 1024
  189 |         snprintf(response, 1024,
      |         ^~~~~~~~~~~~~~~~~~~~~~~~
  190 |             "%s<div class='container'>"
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  191 |             "<div class='menu'><a href='/'>WiFi Setup</a><a href='/info'>Device Info</a></div>"
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |             "<h1>No Networks Found</h1>"
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  193 |             "<form action='/' method='get'><button>Back</button></form>"
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  194 |             "</div>%s",
      |             ~~~~~~~~~~~
  195 |             html_header, html_footer);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
